@@ -20,6 +20,7 @@ v8.0.03
 -------
 General: improved theme-ability
 	Edited file /themes/Default/css/main.css
+	Edited file /themes/Olden/css/main.css
 	Edited various module files
 
 v8.0.02
